--- a/versions.properties
+++ b/versions.properties
@@ -154,3 +154,5 @@ version.com.journeyapps..zxing-android-embedded=4.3.0
 version.com.google.zxing..core=3.5.3
 
 version.android.tools.desugar_jdk_libs=2.1.2
+
+version.de.siegmar..fastcsv=2.2.2
