--- a/browser-api/build.gradle
+++ b/browser-api/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 
     // LiveData
     implementation AndroidX.lifecycle.liveDataKtx
+
+    // TODO: ANA to remove this
+    implementation "io.reactivex.rxjava2:rxjava:_"
+    implementation "io.reactivex.rxjava2:rxandroid:_"
 }
 android {
   namespace 'com.duckduckgo.browser.api'
