--- a/autofill/autofill-impl/build.gradle
+++ b/autofill/autofill-impl/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation AndroidX.biometric
 
     implementation "net.zetetic:android-database-sqlcipher:_"
+    implementation "com.facebook.shimmer:shimmer:_"
 
     // Testing dependencies
     testImplementation "org.mockito.kotlin:mockito-kotlin:_"
