Extract blob download in iframes logic to make it reusable

--- a/browser-api/build.gradle
+++ b/browser-api/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     // LiveData
     implementation AndroidX.lifecycle.liveDataKtx
+
+    implementation AndroidX.webkit
 }
 android {
   namespace 'com.duckduckgo.browser.api'
